# RAGPrescriptionAdvisor

./: .gitignore  README.md  pyproject.toml  tasks.py  treatment_checker.ipynb
data/logs/: build_db.html  log.html  run_rag.html
data/raw_data/: patient_1_history.txt  patient_2_history.txt  patient_3_history.txt  patient_4_history.txt
treatment_checker/: treatment_checker.py  utils.py
treatment_checker/build_db/: build_db.py  build_drug_db.py  db_cfg.json  drugs.py  patient_hist.py  vec_store.py
treatment_checker/query_routing/: choose_route.py  create_few_shot_prompt.py  prefix.txt  query_router.py  query_routing.py  route_query.py
treatment_checker/query_routing/data/: examples.json  prefix.txt  suffix.txt
treatment_checker/rag/: diagnosis_chain.py  full_chain.py  multi_query.py  patient_history_chain.py  rag_cfg.json  rag_fusion.py  reciprocal_rank_fusion.py
treatment_checker/rag/data/: identify_patient_template.txt  rag_with_hist_template.txt
treatment_checker/rag_fusion/: multi_query.py  multi_query_template.txt  rag.py  rag_fusion.py  reciprocal_rank_fusion.py
